k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dexcom-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: '[your host]'
      http:
        paths:
          - path: "/"
            backend:
              serviceName: dexcom-proxy
              servicePort: 80
  tls:
    - hosts:
        - '[your host]'
      secretName: dexcom-proxy-tls-cert
